# app

./: .cursorrules  .cursorrules-backlog.md  .gitignore  AGENTS.md  Cargo.toml  clippy.toml  desired.md  mise.toml  rustfmt.toml
.cursor/commands/: backlog.md  decision.md  doc.md  mise-task.md  plan.md  start.md
.github/workflows/: web-docs.yml
.mise/: assets.toml  build.toml  dev.toml  quality.toml  run.toml  tasks.toml  web-docs.toml
.mise/shell/: .gitkeep  cli-test.sh  file-size-check.sh  npm-audit.sh  quality.sh  sync-web-docs-content.sh
.mise/tasks/: tasks.toml
backlog/: config.yml
backlog/completed/: task-0001 - Initialize-Dioxus-desktop-application-project.md  task-0002 - Add-system-tray-crate-dependencies-and-platform-configuration.md  task-0003 - Implement-system-tray-icon-display-for-Windows-and-macOS.md  task-0004 - Implement-system-tray-menu-that-appears-on-icon-click.md  task-0005 - Initialize-Cargo-workspace-with-layer-crates.md  task-0006 - Initialize-Persistence-layer-crate.md  task-0009 - Initialize-GUI-application-layer-crate.md  task-0010 - Set-up-icons-system-infrastructure.md  task-0011 - Implement-icon-copy-script-and-build-process.md  task-0012 - Create-icon-component-in-GUI-crate.md  task-0013 - Set-up-Tailwind-CSS-infrastructure.md
backlog/decisions/: decision-0001 - Zero-Controllers.md  decision-0002 - Use-Dioxus-for-UI-Framework.md  decision-0003 - Use-Rust-for-Backend.md  decision-0004 - Use-kube-rs-crate-for-Kubernetes-API.md  decision-0005 - Use-Git-for-Configuration-Sync.md  decision-0006 - Use-Handlebars-Tera-for-Template-Rendering.md  decision-0007 - Use-JSONPath-for-CRD-Value-Extraction.md  decision-0008 - Use-Tokio-as-Async-Runtime.md  decision-0009 - Layered-Modular-Architecture-Pattern.md  decision-0010 - Local-First-Philosophy.md  decision-0011 - Workspace-Based-Configuration.md  decision-0012 - Git-as-Source-of-Truth.md  decision-0013 - Explicit-Lifecycle-Management.md  decision-0014 - Separation-of-Concerns.md  decision-0015 - JSONPath-Based-CRD-Value-Extraction.md  decision-0016 - App-Centric-Model.md  decision-0017 - Port-Forwarding-as-First-Class-Feature.md  decision-0018 - Multi-Instance-Deployments.md  decision-0019 - CRD-Based-Environment-Variables.md  decision-0020 - System-Tray-Interface.md
backlog/milestones/: m-0 - release-1.0.md  m-1 - Configuration-Git-Sync.md  m-10 - Advanced-Features.md  m-11 - Production-Ready.md  m-2 - Kubernetes-Integration.md  m-3 - Deployment-Engine.md  m-4 - Instance-Management.md  m-5 - Port-Forwarding.md  m-6 - State-Reconciliation.md  m-7 - CLI-MVP-Complete.md  m-8 - Basic-GUI.md  m-9 - Complete-GUI.md
backlog/tasks/: task-0001 - Initialize-Dioxus-desktop-application-project.md  task-0002 - Add-system-tray-crate-dependencies-and-platform-configuration.md  task-0003 - Implement-system-tray-icon-display-for-Windows-and-macOS.md  task-0004 - Implement-system-tray-menu-that-appears-on-icon-click.md  task-0005 - Initialize-Cargo-workspace-with-layer-crates.md  task-0006 - Initialize-Persistence-layer-crate.md  task-0007 - Initialize-Domain-layer-crate.md  task-0008 - Initialize-Core-layer-crate.md  task-0009 - Initialize-GUI-application-layer-crate.md  task-0010 - Set-up-icons-system-infrastructure.md  task-0011 - Implement-icon-copy-script-and-build-process.md  task-0012 - Create-icon-component-in-GUI-crate.md  task-0013 - Set-up-Tailwind-CSS-infrastructure.md  task-0014 - Integrate-Tailwind-CSS-build-process-and-asset-loading.md  task-0015 - Set-up-GUI-asset-directory-structure-and-build-process-integration.md  task-0017 - Add-Kubernetes-client-dependencies.md  (+50 more)
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/commands/: mod.rs  status.rs  sync.rs  test.rs  workspace.rs
cli/tests/: commands_tests.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs  workspace.rs
core/src/api/: config.rs  mod.rs
core/src/api/kubernetes/: client.rs  context.rs  mod.rs  portforward.rs  portforwarding.rs  portforwarding_singleton.rs
core/src/api/kubernetes/portforwarding/: health.rs  manager.rs  mod.rs  task.rs  types.rs
core/src/bridge/: mod.rs
core/src/validation/: mod.rs
core/tests/: config_api_tests.rs  errors_tests.rs  kubernetes_client_tests.rs  portforward_manager_tests.rs  portforwarding_manager_tests.rs  portforwarding_singleton_tests.rs
core/tests/portforwarding_manager_tests/: basic.rs  health.rs  instances.rs  mod.rs  ports.rs
core/tests/portforwarding_singleton_tests/: initialization.rs  mod.rs  retrieval.rs
domain/: Cargo.toml
domain/src/: config.rs  errors.rs  lib.rs  processor.rs  types.rs
domain/src/handlers/: mod.rs
domain/src/types/: app_config.rs  entity.rs  mod.rs  port.rs  port_forwarding.rs
domain/tests/: config_tests.rs  errors_tests.rs  handlers_tests.rs  processor_tests.rs  types_tests.rs
domain/tests/config_tests/: app_config.rs  mod.rs  port_forwarding.rs  port_value.rs
gui/: Cargo.toml
gui/assets/: tailwind.css
gui/assets/branding/: logo.icns
gui/src/: icons.rs  main.rs
gui/src/components/: mod.rs  pod_list.rs  port_forward_item.rs
gui/src/components/pod_list/: handlers.rs  mod.rs  port_button.rs
gui/src/components/port_forward_item/: handlers.rs  mod.rs  ui.rs
gui/src/components/workspace_config/: mod.rs
gui/src/layout/: mod.rs
gui/src/pages/: home.rs  mod.rs  settings.rs
gui/src/tray/: icon.rs  menu.rs  mod.rs
icons/: package-lock.json  package.json
overview/: architecture.md  desc.md  features.md  talking-points.md  tasks.md
persistence/: Cargo.toml
persistence/src/: config.rs  errors.rs  lib.rs
persistence/src/git/: clone.rs  credentials.rs  directories.rs  fetch.rs  mod.rs  sync.rs  tests.rs
persistence/src/models/: definition.rs  execution.rs  mod.rs  state.rs
persistence/src/store/: mod.rs
persistence/tests/: errors_tests.rs  store_tests.rs
src/: main.rs
tailwind/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-docs/: .gitignore  .prettierignore  README.md  home.mdx  index.html  next.config.mjs  next.config.mts  package-lock.json  package.json  vite.config.js
(+24 files in other folders)
