[workspace]
members = [
    "persistence",
    "domain",
    "core",
    "gui",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Roro Kube Contributors"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[workspace.lints.clippy]
pedantic = "warn"
cognitive_complexity = "warn"
type_complexity = "warn"
