[package]
name = "roro_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "roro-kube"
path = "src/main.rs"

[dependencies]
roro_core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
async-trait = "0.1"

[lints]
workspace = true

