[package]
name = "roro_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "roro-kube-cli"
path = "src/main.rs"

[dependencies]
roro_core = { path = "../core" }
roro_domain = { path = "../domain" }
roro_persistence = { path = "../persistence" }
clap = { version = "4.5", features = ["derive"] }
tokio.workspace = true
async-trait = "0.1"
k8s-openapi = { version = "0.26", features = ["v1_30"] }

[lints]
workspace = true

