[package]
name = "roro_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "roro_core"
path = "src/lib.rs"

[dependencies]
roro_persistence = { path = "../persistence" }
roro_domain = { path = "../domain" }
thiserror.workspace = true

[lints]
workspace = true

