[package]
name = "roro_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "roro_core"
path = "src/lib.rs"

[dependencies]
roro_persistence = { path = "../persistence" }
roro_domain = { path = "../domain" }
thiserror.workspace = true
kube.workspace = true
tokio.workspace = true
k8s-openapi = { version = "0.26", features = ["v1_30"] }

[dev-dependencies]

[lints]
workspace = true

