[package]
name = "roro_domain"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "roro_domain"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true

