[package]
name = "roro_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "roro-kube"
path = "src/main.rs"

[dependencies]
roro_core = { path = "../core" }
dioxus = { version = "0.7", features = ["desktop"] }
tray-icon = "0.19"
tao = "0.30"

[lints]
workspace = true

