[package]
name = "roro_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "roro-kube"
path = "src/main.rs"

[dependencies]
roro_core = { path = "../core" }
roro_domain = { path = "../domain" }
dioxus = { version = "0.7", features = ["desktop"] }
image = "0.24"
k8s-openapi = { version = "0.26", features = ["v1_30"] }

[lints]
workspace = true

