[package]
name = "roro_persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "roro_persistence"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true

